--- a/views/partials/userPartials/header.ejs
+++ b/views/partials/userPartials/header.ejs
@@ -104,16 +104,16 @@
 								<a href="/showOrder">Order</a>
 							</li>
 
-							<li>
+							<!-- <li>
 								<a href="blog.html">Blog</a>
-							</li>
+							</li> -->
 
 							<li>
 								<a href="about.html">About</a>
 							</li>
 
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="/contact">Contact</a>
 							</li>
 						</ul>
 					</div>	
@@ -277,16 +277,16 @@
 						<a href="/showOrder">Order</a>
 				</li>
 
-				<li>
+				<!-- <li>
 					<a href="blog.html">Blog</a>
-				</li>
+				</li> -->
 
 				<li>
 					<a href="about.html">About</a>
 				</li>
 
 				<li>
-					<a href="contact.html">Contact</a>
+					<a href="/contact">Contact</a>
 				</li>
 			</ul>
 		</div>
