--- a/views/partials/userPartials/header.ejs
+++ b/views/partials/userPartials/header.ejs
@@ -96,9 +96,9 @@
 								<a href="/shop">Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
+							<!-- <li class="label1" data-label1="hot">
 								<a href="shoping-cart.html">Features</a>
-							</li>
+							</li> -->
 
 							<li>
 								<a href="/showOrder">Order</a>
@@ -269,9 +269,9 @@
 					<a href="/shop">Shop</a>
 				</li>
 
-				<li>
+				<!-- <li>
 					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
-				</li>
+				</li> -->
 
 				<li>
 						<a href="/showOrder">Order</a>
