--- a/views/partials/adminPartials/header.ejs
+++ b/views/partials/adminPartials/header.ejs
@@ -90,7 +90,7 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="/admin/listBanner">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">ad</i>
+              <i class="material-icons opacity-10">assignment</i>
             </div>
             <span class="nav-link-text ms-1">Banner</span>
           </a>
@@ -109,7 +109,7 @@
           <div class="dropdown">
             <a class="nav-link text-white dropdown-toggle d-flex" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="material-icons opacity-10">percentage</i>
+                <i class="material-icons opacity-10">assignment</i>
               </div>
               <span class="nav-link-text ms-1">Offer</span>
               <div class="flex-grow-1"></div>
