--- a/views/user/signIn.ejs
+++ b/views/user/signIn.ejs
@@ -364,6 +364,7 @@
                       <div class="form-outline mb-4">
                         <input
                           type="email"
+													value="guest@gmail.com"
                           class="form-control form-control-lg"
                           name="email"
                           id="input1"
@@ -378,6 +379,7 @@
                       <div class="form-outline mb-4">
                         <input
                           type="password"
+													value="guest123"
                           class="form-control form-control-lg"
                           id="input2"
                           name="password"
